# todo-app-python

./: pyproject.toml
src/todo_app/: __init__.py
src/todo_app/app/: main.py
src/todo_app/container/: container.py
src/todo_app/controllers/: todo_controller.py
src/todo_app/repositories/: models.py  todo_repository.py
src/todo_app/services/: todo_service.py
src/todo_app/ui/: main_window.py  main_window_ui.py
src/todo_app/utils/: database_provider.py  file_service.py
