[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tado", email = "dothanhtupt@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "dependency-injector>=4.44.0",
    "pandas>=2.2.3",
    "pyside6>=6.8.1",
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
